# krishiAI

./: .dockerignore  .env.example  .gitignore  .mailmap  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/versions/: 202606260001_auth_identity.py  202606270001_onboarding_domain_core.py  202606300001_geospatial_core.py  202606300002_boundary_management.py  202607010001_weather_foundation.py  202607010002_disease_risk_engine.py  202607010003_water_intelligence.py  202607010004_crop_intelligence.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: __init__.py  config.py  middleware.py  security.py  settings.py
apps/api/app/db/: base.py  init_db.py
apps/api/app/models/: __init__.py  auth.py  crop_intelligence.py  disease.py  farm.py  farmer.py  geospatial.py  language.py  location.py  plot.py  water.py  weather.py
apps/api/app/schemas/: auth.py  crop_intelligence.py  disease.py  geospatial.py  onboarding.py  spatial.py  water.py  weather.py
apps/api/app/services/: auth_seed.py  crop_intelligence.py  crop_intelligence_seed.py  disease_risk.py  disease_seed.py  region_seed.py  seed_data.py  spatial.py  spatial_intelligence.py  water_intelligence.py  water_seed.py  weather_cache.py  (+2 more)
apps/api/tests/: test_auth.py  test_crop_intelligence.py  test_disease_risk.py  test_geospatial.py  test_health.py  test_onboarding.py  test_spatial_intelligence.py  test_water_intelligence.py  test_weather.py
(+70 files in other folders)
